--- a/.github/workflows/buildAndDeploy.yaml
+++ b/.github/workflows/buildAndDeploy.yaml
@@ -34,5 +34,5 @@ jobs:
           context: ./backend
           file: ./backend/Dockerfile
           push: true
-          tags: loasit00/ds_todo:v1
+          tags: loasit00/ds_todo_backend:v1
 
