Adds logic for backend and frontend Action

--- a/.github/workflows/buildBackend.yaml
+++ b/.github/workflows/buildBackend.yaml
@@ -1,7 +1,10 @@
-name: Build and Deploy Action
+name: Build Action for backend
 
 on:
   push:
+    paths:
+      - backend/**
+      - .github/workflows/buildBackend.yaml
     branches:
       - main
 
