--- a/.github/workflows/buildBackend.yaml
+++ b/.github/workflows/buildBackend.yaml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: build-${{ github.ref }}-backend
+  cancel-in-progress: true
+
 jobs:
   build:
     name: Build
