updates docker-compose and adds Repository logic

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,32 @@
 version: '3'
 services:
   db:
-    image: postgres:latest
-    ports:
-      - "5432:5432"
+    image: postgres:alpine
+    restart: always
+    container_name: ds_todo__db
     environment:
+      POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: todoDB
+      POSTGRES_DB: postgres
     volumes:
-      - ./database:/var/lib/postgresql
+      - pgdata:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
 
   backend:
-    image: ds_todo:v1
-    ports:
-      - 8080:8080
-    environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_NAME: todoDB
-      DB_USER: postgres
-      DB_PASSWORD: password
+    restart: always
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    image: ds_todo_backend:v1
+    container_name: todo_backend
     depends_on:
       - db
-
+    environment:
+      DATABASE_TYPE: postgres
+      DATABASE_URL: postgres://postgres:postgres@db:5432/postgres
+      PORT: 9000
+    ports:
+      - 9000:9000
 volumes:
-  mongodb_data:
+  pgdata:
