--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 server.port=8080
 management.endpoints.web.exposure.include=*
 server.forward-headers-strategy=native
+
+# postgres
+spring.datasource.url=jdbc:postgresql://labdb:${POSTGRES_PORT}/
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto = update
