--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ management.endpoints.web.exposure.include=*
 server.forward-headers-strategy=native
 
 # postgres
-spring.datasource.url=jdbc:postgresql://labdb:${POSTGRES_PORT}/
+spring.datasource.url=jdbc:postgresql://ds_todo_db:${POSTGRES_PORT}/
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
