--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.forward-headers-strategy=native
 
 # postgres
 spring.datasource.url=jdbc:postgresql://ds_todo_db:5432/postgres
-spring.datasource.username=root
+spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 # Hibernate Properties
