--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     container_name: ds_todo_db
     environment:
       POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: root
+      POSTGRES_USER: postgres
       POSTGRES_DB: postgres
     volumes:
       - pgdata:/var/lib/postgresql/data
