--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,8 @@ services:
       - "8090:8090"
     environment:
       - SERVER_PORT=8090
-      - BACKEND_ENDPOINT=http://backend:8080/todos/
+      - BACKEND_ENDPOINT=http://backend:8080/todo/
+    depends_on:
+      - ds_todo_backend
 volumes:
   pgdata:
