--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,6 +5,7 @@ COPY src ./src
 RUN --mount=type=cache,target=/root/.m2 mvn clean package -DskipTests
 
 FROM eclipse-temurin:17-jdk-alpine as runner
+WORKDIR /app
 COPY --from=builder /app/target/demo-0.0.1-SNAPSHOT.jar .
 EXPOSE 8090
-CMD ["java", "-jar", "/app/app.jar"]
+CMD ["java", "-jar", "/app.jar"]
