--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,6 @@ COPY src ./src
 RUN --mount=type=cache,target=/root/.m2 mvn clean package -DskipTests
 
 FROM eclipse-temurin:17-jdk-alpine as runner
-WORKDIR /app
-COPY --from=builder /app/target/demo-0.0.1-SNAPSHOT.jar .
+COPY --from=builder /app/target/demo-0.0.1-SNAPSHOT.jar ./app/target/
 EXPOSE 8090
-CMD ["java", "-jar", "/app.jar"]
+CMD ["java", "-jar", "/app/target/demo-0.0.1-SNAPSHOT.jar"]
