--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,7 +39,7 @@ services:
       - "8090:8090"
     environment:
       - SERVER_PORT=8090
-      - BACKEND_ENDPOINT=http://backend:8080/todo/
+      - BACKEND_ENDPOINT=http://ds_todo_backend:8080/todo/
     depends_on:
       - ds_todo_backend
 volumes:
