--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,6 @@
 FROM maven:3.8.4-openjdk-17 as builder
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
+COPY . .
 RUN --mount=type=cache,target=/root/.m2 mvn clean package -DskipTests
 
 FROM eclipse-temurin:17-jdk-alpine as runner
