--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ management.endpoints.web.exposure.include=*
 server.forward-headers-strategy=native
 
 # postgres
-spring.datasource.url=jdbc:postgresql://ds_todo_db:5432/postgres
+spring.datasource.url=jdbc:postgresql://db:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
